--- a/NodeThing/NodeThing/NodeThing.csproj
+++ b/NodeThing/NodeThing/NodeThing.csproj
@@ -51,6 +51,7 @@
     <Compile Include="EditorStates.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="GeomertyFactory.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -60,12 +61,14 @@
     <Compile Include="Graph.cs" />
     <Compile Include="Node.cs" />
     <Compile Include="NodeFactory.cs" />
+    <Compile Include="NodeProperties.cs" />
     <Compile Include="PointMath.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DoublBufferedPanel.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="TextureFactory.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
