--- a/NodeThing/NodeThing/NodeThing.csproj
+++ b/NodeThing/NodeThing/NodeThing.csproj
@@ -48,6 +48,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Connection.cs" />
+    <Compile Include="CustomPropertyGrid.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="EditorStates.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -61,13 +64,13 @@
     <Compile Include="Graph.cs" />
     <Compile Include="Node.cs" />
     <Compile Include="NodeFactory.cs" />
-    <Compile Include="NodeProperties.cs" />
     <Compile Include="PointMath.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DoublBufferedPanel.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Setting.cs" />
     <Compile Include="TextureFactory.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
