--- a/NodeThing/NodeThing/NodeThing.csproj
+++ b/NodeThing/NodeThing/NodeThing.csproj
@@ -53,6 +53,7 @@
     <Compile Include="ColorEditor.Designer.cs">
       <DependentUpon>ColorEditor.cs</DependentUpon>
     </Compile>
+    <Compile Include="NodeProperty.cs" />
     <Compile Include="ValueEditor2d.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -65,9 +66,6 @@
     </Compile>
     <Compile Include="ValueEditor.Designer.cs">
       <DependentUpon>ValueEditor.cs</DependentUpon>
-    </Compile>
-    <Compile Include="CustomPropertyGrid.cs">
-      <SubType>Component</SubType>
     </Compile>
     <Compile Include="DisplayForm.cs">
       <SubType>Form</SubType>
@@ -94,7 +92,6 @@
     <Compile Include="DoublBufferedPanel.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Setting.cs" />
     <Compile Include="TextureFactory.cs" />
     <EmbeddedResource Include="ColorEditor.resx">
       <DependentUpon>ColorEditor.cs</DependentUpon>
