Add a couple of new sources and modifiers

--- a/NodeThing/NodeThing.csproj
+++ b/NodeThing/NodeThing.csproj
@@ -55,6 +55,7 @@
     </Compile>
     <Compile Include="NodeProperty.cs" />
     <Compile Include="TopologicalSorter.cs" />
+    <Compile Include="Utils.cs" />
     <Compile Include="ValueEditor2d.cs">
       <SubType>UserControl</SubType>
     </Compile>
